--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "walletsorder",
+  "name": "telegram-token-analyzer",
   "version": "1.0.0",
   "description": "Bot Telegram pour analyser les premiers acheteurs de tokens",
   "main": "bot.js",
@@ -9,7 +9,8 @@
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
     "ethers": "^6.8.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "express": "^4.18.0"
   },
   "engines": {
     "node": "18.x"
